--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "author": "Hrishi Yadav",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
     "ejs": "^3.1.9",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "mongoose": "^7.3.4"
   }
 }
